[package]
name = "demo4"
version = "0.1.0"
authors = ["crazycs <crazycs520@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
backtrace = "0.3"
lazy_static = "1.4"
libc = "^0.2.66"
log = "0.4"
nix = "0.20"
parking_lot = "0.11"
tempfile = "3.1"
thiserror = "1.0"